# tide

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: example.toml
crates/tide-config/: Cargo.toml
crates/tide-core/: Cargo.toml
crates/tide-core/src/: lib.rs
crates/tide-core/src/types/: account.rs  mod.rs
crates/tide-core/src/validator/: mod.rs
docs/: architecture.md
