[workspace]
resolver = "2"
members = [
    "crates/tide-core",
    "crates/tide-config",
    "crates/tide-plugin",
    "crates/tide-formats",
    "crates/tide-cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vivek <31vivekpal@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/tide"
description = "High-performance data streaming for Solana validators"

[workspace.dependencies]
# Solana dependencies
solana-program = "2.2.0"
solana-sdk = "2.2.0"
solana-transaction-status = "2.2.0"
agave-geyser-plugin-interface = "2.2.1"

# Performance optimizations
memmap2 = "0.9"
crossbeam-channel = "0.5.12"
rayon = "1.8"
simdutf8 = "0.1.4"

# Serialization/Deserialization
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.115"
json5 = "0.4.1"
arrow = { version = "53.0.0", features = ["prettyprint"] }
parquet = "53.0.0"
borsh = "1.2.1"
bincode = "1.3.3"

# Configuration
config = "0.14.0"
clap = { version = "4.5.1", features = ["derive"] }

# Error handling and utilities
anyhow = "1.0.80"
thiserror = "2.0.8"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

# Async runtime (minimal, used only where necessary)
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros", "signal"] }

[patch.crates-io]
curve25519-dalek = { git = "https://github.com/dalek-cryptography/curve25519-dalek", rev = "8274d5cbb6fc3f38cdc742b4798173895cd2a290" }
solana-zk-token-sdk = { git = "https://github.com/anza-xyz/agave", branch = "v2.2" }